@@ -1,3 +1,8 @@
+2007-01-12  Shaun McCance  <shaunm@gnome.org>
+
+	* macros2/gnome-autogen.sh:
+	- Fix for #377175 by skipping NO-AUTO-GEN directories, by Christian Persch
+
 2007-01-11  Christian Persch  <chpe@svn.gnome.org>
 
 	* macros2/gnome-autogen.sh: Default to AM 1.9. Bug #323868, patch by
